# gpu-benchmark

./: .gitignore  MANIFEST.in  README.md  benchmark.py  benchmark_2025-04-17_17-29-17.txt  benchmark_2025-04-17_17-42-25.txt  benchmark_2025-04-18_19-48-30.txt  database.py  main.ipynb  pyproject.toml  todo.md
src/gpu_benchmark/: __init__.py  benchmark.py  benchmark_2025-04-18_22-31-46.txt  benchmark_2025-04-18_22-35-34.txt  benchmark_2025-04-18_23-59-41.txt  benchmark_2025-04-19_00-01-16.txt  benchmark_2025-04-19_00-08-19.txt  benchmark_2025-04-19_00-10-44.txt  benchmark_2025-04-19_00-11-45.txt  benchmark_2025-04-19_00-15-05.txt  benchmark_2025-04-19_00-18-34.txt  benchmark_2025-04-19_00-19-49.txt  benchmark_2025-04-19_00-22-24.txt  database.py  main.py  main_test.py  testing.py  utils.py
src/gpu_benchmark/benchmarks/: __init__.py  llm.py  qwen3-0.6B.py  qwen3_0_6b.py  stable_diffusion.py  stable_diffusion_1_5.py
