[project]
name = "gpu_benchmark"
version = "0.2.6"
description = "GPU benchmarking tool using Stable Diffusion"
readme = "README.md"
authors = [
    {name = "Max Hager", email = "maxhager28@gmail.com"}
]
dependencies = [
    "torch",
    "tqdm",
    "diffusers",
    "transformers",
    "accelerate",
    "pynvml",
    "supabase"
]

[project.optional-dependencies]
rocm = [
  "amdsmi"
]


[project.scripts]
gpu-benchmark = "gpu_benchmark.main:main"