[project]
name = "gpu_benchmark"
version = "0.3.1"
description = "GPU benchmarking tool using Stable Diffusion"
readme = "README.md"
authors = [
    {name = "Max Hager", email = "maxhager28@gmail.com"}
]
dependencies = [
    "torch",
    "tqdm",
    "diffusers",
    "transformers",
    "accelerate",
    "pynvml",
    "supabase"
]

[project.scripts]
gpu-benchmark = "gpu_benchmark.main:main"